[project]
name = "boomerang_cash"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Lucas Limeira", email = "lucasalveslm@gmail.com"},
]
dependencies = ["fastapi>=0.115.6", "uvicorn>=0.34.0", "pydantic-br>=1.1.0", "email-validator>=2.2.0", "pydantic-settings>=2.7.0", "dependency-injector>=4.44.0", "motor>=3.6.0", "beanie>=1.28.0", "pyjwt>=2.10.1", "passlib[bcrypt]>=1.7.4", "python-dateutil>=2.9.0.post0", "httpx>=0.28.1"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pytest.ini_options]
pythonpath = "."
filterwarnings = [
    "ignore::DeprecationWarning",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff.lint]
select = [
    "E",
    "F",
]

[dependency-groups]
dev = [
    "ruff>=0.8.3",
    "pytest>=8.3.4",
    "polyfactory>=2.18.1",
    "pytest-asyncio>=0.25.0",
    "freezegun>=1.5.1",
]
